Fix page overflow issue and remove query limiter of the task list

--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -72,6 +72,8 @@ th,td {
 #listContainer {
     width: 484px;
     overflow-wrap: break-word;
+    max-height: 700px;
+    overflow: scroll;
 }
 #tableHeaders {
     text-decoration: underline;
